Bizfi Production/src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>McaApp__Payback_Amount__c</fullName>
        <label>Payback $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>McaApp__Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>McaApp__Payoff_Amount__c</fullName>
        <label>Payoff $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>McaApp__Previous_Opportunity1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities (Previous Opportunity)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>McaApp__Progress_Bar_Icon__c</fullName>
        <formula>CASE( StageName , &apos;Application Sent&apos;, 
IMAGE(&quot;/resource/McaApp__StatusBars/appsent.png&quot;, &quot;App Sent&quot; ,25, 600), 
&apos;Application In&apos;,IMAGE(&quot;/resource/McaApp__StatusBars/appreceived.png&quot;, 
&quot;App Signed&quot;,25, 600), 
&apos;Application Missing Info&apos;,IMAGE(&quot;/resource/McaApp__StatusBars/appreceived.png&quot;, 
&quot;App Signed&quot;,25, 600), 
&apos;Ready to Submit&apos;,IMAGE(&quot;/resource/McaApp__StatusBars/appreceived.png&quot;, 
&quot;App Signed&quot;,25, 600), 
&apos;Underwriting&apos;,IMAGE(&quot;/resource/McaApp__StatusBars/underwriting.png&quot;, 
&quot;Underwriting&quot;,25, 600), 
&apos;Approved&apos;,IMAGE(&quot;/resource/McaApp__StatusBars/approved.png&quot;, 
&quot;Approved&quot;,25, 600), 
&apos;Agreement Signed&apos;,IMAGE(&quot;/resource/McaApp__StatusBars/contractsigned.png&quot;, 
&quot;Contract Signed&quot;,25, 600), 
&apos;Funded&apos;,IMAGE(&quot;/resource/McaApp__StatusBars/funded.png&quot;, 
&quot;Funded&quot;,25, 600), 
&apos;Agreement Sent&apos;,IMAGE(&quot;/resource/McaApp__StatusBars/approved.png&quot;, 
&quot;Approved&quot;,25, 600), 
&apos;Default&apos;,IMAGE(&quot;/resource/McaApp__StatusBars/funded.png&quot;, 
&quot;Funded&quot;,25, 600), 
&apos;Closed Won&apos;,IMAGE(&quot;/resource/McaApp__StatusBars/funded.png&quot;, 
&quot;Funded&quot;,25, 600), 
&apos;Closed Lost&apos;,IMAGE(&quot;/resource/McaApp__StatusBars/ClosedLost.png&quot;, 
&quot;ClosedLost&quot;,25, 600), 
&apos;Renewal Eligible&apos;,IMAGE(&quot;/resource/McaApp__StatusBars/funded.png&quot;, 
&quot;Funded&quot;,25, 600), 
&apos;Renewal Requested&apos;,IMAGE(&quot;/resource/McaApp__StatusBars/funded.png&quot;, 
&quot;Funded&quot;,25, 600), 
&apos;Agreement Requested&apos;,IMAGE(&quot;/resource/McaApp__StatusBars/approved.png&quot;, 
&quot;Approved&quot;,25, 600),
&apos;Renewal Eligible - Pending&apos;,IMAGE(&quot;/resource/McaApp__StatusBars/funded.png&quot;, &quot;Funded&quot;,25, 600), 
&apos;Declined&apos; ,IMAGE(&quot;/resource/McaApp__StatusBars/declined.png&quot;, &quot;Declined&quot;,25, 600), 
IMAGE(&quot;/resource/McaApp__StatusBars/blank.png&quot;,&quot;&quot;,25, 600) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Progress Bar Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__Progress_Bar__c</fullName>
        <formula>CASE( StageName , &apos;Application Sent&apos;, 
IMAGE(&quot;/resource/McaApp__StatusBars/appsent.png&quot;, &quot;App Sent&quot;), 
&apos;Application In&apos;,IMAGE(&quot;/resource/McaApp__StatusBars/appreceived.png&quot;, 
&quot;App Signed&quot;), 
&apos;Application Missing Info&apos;,IMAGE(&quot;/resource/McaApp__StatusBars/appreceived.png&quot;, 
&quot;App Signed&quot;), 
&apos;Ready to Submit&apos;,IMAGE(&quot;/resource/McaApp__StatusBars/appreceived.png&quot;, 
&quot;App Signed&quot;), 
&apos;Underwriting&apos;,IMAGE(&quot;/resource/McaApp__StatusBars/underwriting.png&quot;, 
&quot;Underwriting&quot;), 
&apos;Approved&apos;,IMAGE(&quot;/resource/McaApp__StatusBars/approved.png&quot;, 
&quot;Approved&quot;), 
&apos;Agreement Signed&apos;,IMAGE(&quot;/resource/McaApp__StatusBars/contractsigned.png&quot;, 
&quot;Contract Signed&quot;), 
&apos;Funded&apos;,IMAGE(&quot;/resource/McaApp__StatusBars/funded.png&quot;, 
&quot;Funded&quot;), 
&apos;Agreement Sent&apos;,IMAGE(&quot;/resource/McaApp__StatusBars/approved.png&quot;, 
&quot;Approved&quot;), 
&apos;Default&apos;,IMAGE(&quot;/resource/McaApp__StatusBars/funded.png&quot;, 
&quot;Funded&quot;), 
&apos;Closed Won&apos;,IMAGE(&quot;/resource/McaApp__StatusBars/funded.png&quot;, 
&quot;Funded&quot;), 
&apos;Closed Lost&apos;,IMAGE(&quot;/resource/McaApp__StatusBars/ClosedLost.png&quot;, 
&quot;ClosedLost&quot;), 
&apos;Renewal Eligible&apos;,IMAGE(&quot;/resource/McaApp__StatusBars/funded.png&quot;, 
&quot;Funded&quot;), 
&apos;Renewal Requested&apos;,IMAGE(&quot;/resource/McaApp__StatusBars/underwriting.png&quot;, 
&quot;Underwriting&quot;), 
&apos;Agreement Requested&apos;,IMAGE(&quot;/resource/McaApp__StatusBars/approved.png&quot;, 
&quot;Approved&quot;), 
&apos;Renewal Eligible - Pending&apos;,IMAGE(&quot;/resource/McaApp__StatusBars/funded.png&quot;, &quot;Funded&quot;), 
&apos;Declined&apos; ,IMAGE(&quot;/resource/McaApp__StatusBars/declined.png&quot;, 
&quot;Declined&quot;), 
IMAGE(&quot;/resource/McaApp__StatusBars/blank.png&quot;,&quot;&quot;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__PushCount__c</fullName>
        <label>PushCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>McaApp__Qualified__c</fullName>
        <description>This field identifies if an app is considered qualified for an opener</description>
        <inlineHelpText>$10,000+ Monthly Gross Sales, 500+ FICO score, 6+ Mo in Business, No Open BKs/Tax Liens, Any Open MCA Loans must less than 50% of gross sales, No restricted industries, accurately completed SalesForce Lead and Opportunity Page, and Supporting Documents.</inlineHelpText>
        <label>Qualified</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>McaApp__Rate__c</fullName>
        <label>Rate</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>McaApp__Reason_Lost__c</fullName>
        <description>Displays the reason for the Opportunity being marked as &apos;Closed Lost&apos;</description>
        <label>Reason Lost</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Unresponsive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Went with Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined by All Lenders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad Offers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rate too High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Term too Long</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Term too Short</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Longer needs funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low sales volume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Open Balance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restricted Industry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Years in Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past due balances</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor or no credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Start Up Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax liens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Too much debt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor Bank Account History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed Background Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fraudulent Deal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor Landlord/Mortgage Reference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Timed Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Merchant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>McaApp__Remove_from_Renewal_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This will remove the Opportunity record from displaying on the Renewal Management page</inlineHelpText>
        <label>Remove from Renewal Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>McaApp__Renewal_Eligibility_Days_from_funding__c</fullName>
        <label>Renewal Eligibility (# of months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>McaApp__Renewal_Eligibility_Percent__c</fullName>
        <label>Renewal Eligibility %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>McaApp__Renewal_Prospecting_Date_Time__c</fullName>
        <label>Renewal Prospecting Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>McaApp__Renewal_Prospecting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewal Prospecting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>McaApp__Renewal_Requested_Date_Time__c</fullName>
        <label>Renewal Requested Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>McaApp__Renewal_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewal Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>McaApp__Risk_Rating__c</fullName>
        <description>Demo purposes</description>
        <formula>IF( 
 DAY(  DATEVALUE(CreatedDate) ) &gt;20,IMAGE(&quot;/img/samples/light_green.gif&quot;, &quot;Green&quot; ), 
IF( DAY(  DATEVALUE(CreatedDate) ) &gt;10,
IMAGE(&quot;/img/samples/light_yellow.gif&quot;, &quot;Yellow&quot; ),
IMAGE(&quot;/img/samples/light_red.gif&quot;, &quot;Red&quot; )
))</formula>
        <label>Risk Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ISO Sales Rep</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Bank, ISO, Vendor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Sales Rep)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>McaApp__Schedule__c</fullName>
        <label>Payment Schedule</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twice a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>McaApp__Set_Opportunity_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This check box set to true after lead get convert.</description>
        <label>Set Opportunity Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>McaApp__Submission_Counter__c</fullName>
        <description>This field will store value of submission counter , which will use to identify how many times a deal has been through submission wizard.</description>
        <label>Submission Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>McaApp__Submission_Notes__c</fullName>
        <label>Submission Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>McaApp__Term_Completed__c</fullName>
        <formula>IF( McaApp__Term_Months__c !=0 , IF(McaApp__Months_Since_Funding__c &gt; McaApp__Term_Months__c ,1,McaApp__Months_Since_Funding__c / McaApp__Term_Months__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term % Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>McaApp__Term_Months__c</fullName>
        <label>Term (Months)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>McaApp__Term_Requested__c</fullName>
        <inlineHelpText># of months requested by the merchant</inlineHelpText>
        <label>Term Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>McaApp__Total_Attachment_Count__c</fullName>
        <formula>McaApp__CountAttachment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Attachment Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>McaApp__Total_Commissions_Payable__c</fullName>
        <description>The field will be updated by trigger on Payable and will store a value Roll-up of Payable</description>
        <label>Total Commissions Payable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>McaApp__Total_Commissions_Receivable__c</fullName>
        <description>The field will be populated by trigger and will store the Rollup of Receivables</description>
        <label>Total Commissions Receivable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>McaApp__Total_Daily_Payment__c</fullName>
        <label>Total Daily Payment</label>
        <summarizedField>McaApp__Loan_Balance__c.McaApp__Daily_Payment__c</summarizedField>
        <summaryForeignKey>McaApp__Loan_Balance__c.McaApp__Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>McaApp__Total_Daily_Payments__c</fullName>
        <description>SUM of Loan Balance: Payment</description>
        <label>Total Daily Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>McaApp__Total_Loan_Balance__c</fullName>
        <label>Total Loan Balance</label>
        <summarizedField>McaApp__Loan_Balance__c.McaApp__Balance__c</summarizedField>
        <summaryForeignKey>McaApp__Loan_Balance__c.McaApp__Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>McaApp__Total_Loan_Balances__c</fullName>
        <description>SUM of Loan Balance: Balance</description>
        <label>Total Loan Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>McaApp__Total_Merchant_Payment__c</fullName>
        <description>SUM of Merchant Payment: Payment Amt</description>
        <label>Total Merchant Payments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>McaApp__Total_Merchant_Payments__c</fullName>
        <label>Total Merchant Payments</label>
        <summarizedField>McaApp__Merchant_Payment__c.McaApp__Payment_Amt__c</summarizedField>
        <summaryForeignKey>McaApp__Merchant_Payment__c.McaApp__Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>McaApp__Total_Origination_Fees_Payable__c</fullName>
        <label>Total Origination Fees Payable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>McaApp__Total_Origination_Fees_Receivable__c</fullName>
        <label>Total Origination Fees Receivable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>McaApp__Total_Payables_External__c</fullName>
        <label>Total Payables - External</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>McaApp__Total_Payables_Internal__c</fullName>
        <label>Total Payables - Internal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>McaApp__Total_Payables__c</fullName>
        <description>The field will store the value of Total of All Payable and field will be updated by trigger on Payable</description>
        <label>Total Payables</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>McaApp__Total_Receivables__c</fullName>
        <description>The field will be updated by trigger on receivable and will calculate total of Roll-up</description>
        <label>Total Receivables</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>McaApp__Total_Syndication_Amount__c</fullName>
        <label>Total Syndication Amount</label>
        <summarizedField>McaApp__Syndication__c.McaApp__Syndication_Amt__c</summarizedField>
        <summaryForeignKey>McaApp__Syndication__c.McaApp__Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>McaApp__Total_Syndication_Amt__c</fullName>
        <description>SUM of Syndication: Syndication Amt $</description>
        <label>Total Syndication Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>McaApp__Total_Syndication_Fee__c</fullName>
        <label>Total Syndication Fee</label>
        <summarizedField>McaApp__Syndication__c.McaApp__Servicing_Fee__c</summarizedField>
        <summaryForeignKey>McaApp__Syndication__c.McaApp__Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>McaApp__Total_Syndications_Fee__c</fullName>
        <description>SUM of Syndication: Servicing Fee</description>
        <label>Total Syndication Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>McaApp__TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__Transactions__c</fullName>
        <description>Roll up of Credit card transaction according to month and year</description>
        <label># Transactions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>McaApp__UCC_Filed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UCC Filed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>McaApp__Underwriting_Date_Time__c</fullName>
        <label>Underwriting Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>McaApp__Underwriting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Underwriting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>McaApp__Use_of_Proceeds__c</fullName>
        <label>Use of Proceeds</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__Voided_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Voided Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>McaApp__WHCDB_Days_since_last_update_or_activity__c</fullName>
        <formula>if (today() - LastActivityDate &gt;=0,
min(today() - LastActivityDate , now() - LastModifiedDate ),now() - LastModifiedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days since last update or activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>McaApp__Westlaw_Search__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Westlaw Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>McaApp__fee_revenue_xirr__c</fullName>
        <label>FEES (REVENUE)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Bank_Deposits__c</fullName>
        <label># Monthly Bank Deposits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_CC_Batches__c</fullName>
        <label># Monthly CC Batches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_CC_Tickets__c</fullName>
        <label># Monthly CC Tickets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_CC_Transactions__c</fullName>
        <label># Monthly CC Transactions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Debt_Service__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Monthly Debt Service</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_NDBs__c</fullName>
        <label># Monthly NDBs</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_NSFs__c</fullName>
        <label># Monthly NSFs</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Online_Sales__c</fullName>
        <label>Monthly Online Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Profit_Loss_Amount__c</fullName>
        <label>Net Profit/Loss Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>No_of_NBDs__c</fullName>
        <defaultValue>0</defaultValue>
        <label>No. of NBDs</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_NSFs__c</fullName>
        <defaultValue>0</defaultValue>
        <label>No. of NSFs</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Occupancy__c</fullName>
        <label>Occupancy</label>
        <picklist>
            <picklistValues>
                <fullName>Rented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mortgaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owned Outright</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Old_Id__c</fullName>
        <externalId>true</externalId>
        <label>Old_Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Online_Sales__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Online Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Open_BK__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Open BK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opener_Package__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates if the Opportunity originated from an Opener Package.</description>
        <label>Opener Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Complete__c</fullName>
        <description>If one or all of these fields are blank/null then the check box will not be marked as true. If all the fields are filled in, then the checkbox will be marked true meaning the Opp is complete.</description>
        <formula>IF(AND(Test_Complete__c == FALSE, OR(ISNULL ( McaApp__Amount_Requested__c ), ISNULL ( Gross_Annual_Sales__c ), ISNULL( McaApp__Gross_monthly_Sales__c ), ISPICKVAL( Occupancy__c , &quot;&quot;), ISNULL ( Rent_Mortgage_Amount__c ))),false,true)</formula>
        <inlineHelpText>To complete this Opportunity, enter information in the following fields: Amount Requested, Gross Monthly Sales, Gross Annual Sales, Occupancy, and Rent/Mortgage Amount.</inlineHelpText>
        <label>Opportunity Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Organic_Sub__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Organic Sub</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_1_Business_Direct_Phone__c</fullName>
        <formula>McaApp__Owner_1__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner 1 Business Direct Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_1_Credit__c</fullName>
        <formula>McaApp__Owner_1__r.Credit_Score__c</formula>
        <label>Owner 1 Credit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner_2_Business_Direct_Phone__c</fullName>
        <formula>McaApp__Owner_2__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner 2 Business Direct Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_2_Credit__c</fullName>
        <formula>McaApp__Owner_2__r.Credit_Score__c</formula>
        <label>Owner 2 Credit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Paid_Off_60_Days_Ago__c</fullName>
        <formula>TODAY() &gt;= X100_Term_Completed_Date__c + 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Paid Off 60 Days Ago</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Paid_Off__c</fullName>
        <formula>TODAY() &gt;= X100_Term_Completed_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Paid Off</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Paid_off_60_days_ago_DTS__c</fullName>
        <formula>IF (  Paid_Off_60_Days_Ago__c = True , TODAY () , NULL )</formula>
        <label>Paid off 60 days ago DTS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partner_Deal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner Deal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Peak_Months__c</fullName>
        <label>Peak Months</label>
        <picklist>
            <controllingField>Seasonal_Business__c</controllingField>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Preapproved_Amount__c</fullName>
        <label>Preapproved Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Preapproved_By__c</fullName>
        <label>Preapproved By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preapproved_Program_Length_months__c</fullName>
        <label>Preapproved Program Length (months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Financing_Balance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Previous Financing Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_Financing_Type__c</fullName>
        <label>Previous Financing Type</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Opportunities (Primary Campaign)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Profitable_last_year__c</fullName>
        <label>Profitable last year?</label>
        <picklist>
            <picklistValues>
                <fullName>Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loss</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prospecting_Date_Time__c</fullName>
        <label>Prospecting Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Renewal_Prospecting_Date_Time__c</fullName>
        <label>Renewal Prospecting Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Renewal_Requested_Date_Time__c</fullName>
        <label>Renewal Requested Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Rent_Mortgage_Amount__c</fullName>
        <label>Rent/Mortgage Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Required_Fields_Complete__c</fullName>
        <description>Verifies that all fields required for Bizfi submission are complete</description>
        <formula>Opportunity_Complete__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Required Fields Complete</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>